# profile.timothybryantjr

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflow/: build.yaml
.github/workflows/: build.yaml  ci.yaml
configs/: entrypoint.sh  gunicorn_config.py  nginx.conf
src/: main.py  personal.ini
src/helpers/: definitions.py
src/static/css/: main.css
src/templates/: base.html  homepage.html
tests/: test_homepage.py
